Bug 476557 - No 'Show Menu Bar' option in rigt-click menu
Summary: No 'Show Menu Bar' option in rigt-click menu
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.1
Platform: Kubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-11-04 18:01 UTC by alex
Modified: 2025-05-06 23:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description alex 2023-11-04 18:01:31 UTC
SUMMARY
When you do right-click in console window, there opens a pop-up menu, but there is no 'Show Menu Bar' option.
Even the KDE documentation explicitly says there should be a 'Show Menu Bar' option:   https://docs.kde.org/stable5/en/konsole/konsole/commandreference.html#menubar


STEPS TO REPRODUCE
1.  Open konsole 
2.  Do a right-click


OBSERVED RESULT
Observe that there is no 'Show Menu Bar' option in a pop-up menu that opens.

EXPECTED RESULT
There should be a  'Show Menu Bar' option in a pop-up menu that opens.


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 23.10
(available in About System)
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.10

ADDITIONAL INFORMATION
Comment 1 alex 2023-11-04 18:03:11 UTC
Note that keyboard combination 'Ctrl-Shift-M still works: it shows or hides Konsole menu bar at the top of the window.
Comment 2 Ville Aakko 2023-12-05 12:50:49 UTC
It is easy to hide the menu bar by mistake (or, perhaps another bug and the menu bar hides itself, as I don't recall hiding it???).

Anyways, there is no way to bring it back or to show the keybinding from the UI, once it has been removed. It seems like it used to be in the right click context menu before, but has been removed (as a mistake) at some point?
Comment 3 Kurt Hindenburg 2024-06-06 23:30:46 UTC
Using the recent version, there's a "menu..." item when the toolbars and menubar are hidden.  When the session toolbar is visible, the "menu..." item is not there since it is in the session toolbar.
Comment 4 Bug Janitor Service 2024-06-21 03:47:24 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 5 Ville Aakko 2024-06-22 21:39:48 UTC
Hi,

To re-iterate the bug, with clear steps to reproduce:
1. Press CTRL+SHIT+M (I've done this many times by accident)
2. Forget the key combination
3. Try to bring up menu bar (File, Edit, Show etc...)

Expected results:
There should be a clear way to bring back the menu bar via the UI. (It used to be there in the right-click context menu, but is gone for some reason. It is still listed in the documentation!)

Observer results:
There is no way to bring back the menu bar via the UI. One needs to guess the key combination or use Google (yes, I've needed to do this many times).
Comment 6 Luca Carlon 2025-04-26 16:46:09 UTC
To show the menu bar again, I right click on the terminal and check the option in Menu -> More. Sometimes the "Menu" entry is not present, but this patch fixes the problem for me: https://invent.kde.org/utilities/konsole/-/merge_requests/1093.
Comment 7 Luca Carlon 2025-04-26 16:49:43 UTC
Additional info: the option to hide/show the menu bar in the context menu was probably replaced with the hamburger menu in https://invent.kde.org/utilities/konsole/-/commit/b8325d2f1842e8f5b4999e7e4510093895818dee.
Comment 8 Kurt Hindenburg 2025-05-06 23:27:29 UTC
Git commit 3256676a54307196dbb824334820a42d2cf0ce33 by Kurt Hindenburg, on behalf of Luca Carlon.
Committed on 06/05/2025 at 23:27.
Pushed by hindenburg into branch 'master'.

Ensure hamburger menu is in the popup menu when instance is re-created

This commit fixes an issue with the hamburger menu not appearing in the
context menu. This typically happens when you split the view multiple
times. This is particularly bothering because you cannot show the menu
when it is hidden.

M  +30   -8    src/session/SessionController.cpp
M  +1    -2    src/session/SessionController.h

https://invent.kde.org/utilities/konsole/-/commit/3256676a54307196dbb824334820a42d2cf0ce33