Ensure hamburger menu is in the popup menu when instance is re-created

This commit fixes an issue with the hamburger menu not appearing in the
context menu. This typically happens when you split the view multiple
times. This is particularly bothering because you cannot show the menu
when it is hidden.

BUG: 476557